--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -279,10 +279,9 @@ hr.border_add {
 	margin-bottom:20px
 }
 .bulk_form .caution{
-	text-align:left;
-	margin:10px 0px 30px 400px;
+	text-align: center;
+	margin:10px 0px 30px 0px;
 }
 .bulk_form .caution p{
 	color:#fa8072;
 }
-
