--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -139,7 +139,7 @@ img.book_noimg, img.book_img{
     font-size: 12px;
 }
 
-a.btn_add_book,a.btn_bulk_book, button.btn_addBook,button.btn_editBook, button.btn_deleteBook,button.btn_rentBook,button.btn_returnBook,button.btn_bulkRegist,button.search_box {
+a.btn_add_book,a.btn_bulk_book,a.btn_rent_history,button.btn_addBook,button.btn_editBook, button.btn_deleteBook,button.btn_rentBook,button.btn_returnBook,button.btn_bulkRegist,button.search_box {
     display: inline-block;
     font-size: 16px;
     font-weight: bold;
@@ -155,6 +155,9 @@ a.btn_add_book,a.btn_bulk_book, button.btn_addBook,button.btn_editBook, button.b
 }
 a.btn_bulk_book{
 	background-color: #66cdaa;
+}
+a.btn_rent_history{
+	background-color: #FF9966;
 }
 button.btn_editBook{
     background-color: #9ec34b;
